fixed alignment

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -55,7 +55,6 @@ border-left: 10px solid #0B24F5;
 .project-details {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 15px;
     flex-grow: 1; /* Take available space ???????*/
     border: none;
@@ -141,7 +140,6 @@ border-left: 10px solid #0B24F5;
      padding-top: 0;
      padding-bottom: 0;
      gap: 15px;
-     align-items: center;
      justify-content: center;
     }
 
@@ -162,6 +160,7 @@ border-left: 10px solid #0B24F5;
 
     .project-buttons {
         flex-direction: row;
+        gap: 20px;
     }
 
     .projects-wrapper h1 {
@@ -190,7 +189,6 @@ border-left: 10px solid #0B24F5;
          padding-top: 0;
          padding-bottom: 0;
          gap: 15px;
-         align-items: center;
          justify-content: center;
         }
 
@@ -219,6 +217,7 @@ border-left: 10px solid #0B24F5;
         .project-buttons {
             flex-direction: row;
             margin-bottom: -50px;
+            margin-left: 50px;
         }
     
 }
@@ -238,7 +237,6 @@ border-left: 10px solid #0B24F5;
          padding-top: 0;
          padding-bottom: 0;
          gap: 15px;
-         align-items: center;
          justify-content: center;
         }
 
@@ -269,6 +267,7 @@ border-left: 10px solid #0B24F5;
         .project-buttons {
             flex-direction: row;
             margin-bottom: -50px;
+            margin-left: 50px;
         }
     
 
